# myllm

./: .dockerignore  .env-example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
.kubernetes/: README.md
.kubernetes/conductor/: README.md
.kubernetes/conductor/runtimes/: attn-signs-torch-distributed.yaml
.kubernetes/conductor/webhook/: kustomization.yaml  manifests.yaml
.kubernetes/orchestra/: README.md  example-manifest.yaml
configs/: test-fsdp.yaml  test-grpo.yaml  test-sft-fp8.yaml  test-sft.yaml
configs/accelerate/: grpo_deepspeed.yaml  multigpu_dp_config.yaml  stage2_config.yaml  stage2_fp8_config.yaml  stage3_fp8_config.yaml  stage3_grpo_config.yaml  stage3_multinode.yaml  stage3_offload_config.yaml
configs/deepspeed/: stage_2_fp8.json  stage_2_offload_optim.json  stage_3.json  stage_3_fp8.json  stage_3_grpo.json  stage_3_offload_all.json  stage_3_offload_optim.json  stage_3_offload_param.json
configs/train/grpo/: rl-bormann.toml  rl-gptr-stage1.toml  rl-gptr-stage2.toml  rl-gptr-stage3.toml  rl-grpo-zariman-no-vllm.toml  rl-grpo-zariman.toml  rl-scaler-unsloth.toml  rl-scaler.toml  rl-ygpt.toml
configs/train/sft/: full-sft-gptr.toml  full-sft-watari-fused-tanh.toml  full-sft-watari.toml  full-sft-zariman.toml  lora-sft-watari-32-stage-1.toml  lora-sft-watari-32-stage-2.toml  lora-sft-watariv2.toml
grpo_trainer_lora_model/: adapter_config.json
myllm/: __init__.py  __main__.py  cli.py  enums.py
myllm/algorithms/: __init__.py  base.py  dft.py  distill.py  grpo.py  ppo.py  sft.py
myllm/callbacks/: __init__.py  generation.py  gpu_stats.py  progress.py  wandb.py
myllm/config/: __init__.py  argparser.py  schema.py
myllm/data/: __init__.py  collators.py  module.py  processors.py
myllm/engines/: __init__.py  accelerate.py  deepspeed.py  deepspeed_legacy.py  fsdp.py
myllm/kernels/: fused_rms_norm.py  fused_swiglu.py  load.py  patching.py
myllm/kernels/csrc/custd/: attn.cu
myllm/kernels/csrc/rms_norm/: fused_rms_norm.cpp  fused_rms_norm_kernel.cuh
myllm/kernels/csrc/swiglu/: fused_swiglu.cpp  fused_swiglu_kernel.cu
myllm/kerr/: __init__.py
myllm/kerr/csrc/custd/: F.cu
myllm/kerr/csrc/rms_norm/: fused_rms_norm_kernel.cu
myllm/metrics/: __init__.py  base.py  evaluator.py  perplexity.py
myllm/models/: __init__.py  model_wrapper.py  tokenizer_wrapper.py  wrapper.py
myllm/quant/: __init__.py  backend.py  fp8.py
myllm/rewards/: __init__.py  correctness.py  debug.py  math.py  similarity.py  textual.py  utils.py
myllm/utils/: io.py  lazy.py  logging_utils.py  memory_estimator.py  model_inspector.py  std.py
scripts/: run_grpo.sh  run_sft.sh
src/fusion/dyntanh/: __init__.py  fusion.py  integration.py  interface.py
src/fusion/geglu/: geglu.cpp  geglu_kerr.cuh  setup.py
src/helpers/: adapters.py
src/reward_models/: drama.py
src/rewards/: __init__.py  rewards_grpo.py
src/train/: adapters.py  distill.py  dpo.py  grpo.py  new_distill.py  new_grpo.py  ppo.py  sft.py  test_grpo.py  tokenizer.py
src/train/unsloth/: grpo.py
src/utils/arrays/: __init__.py  array_utils.py
src/utils/attn/: __init__.py
src/utils/callbacks/: __init__.py  generate_examples.py
src/utils/collators/: __init__.py  completions_only.py
src/utils/compute/: __init__.py  gpu.py
src/utils/configurators/: __init__.py  argparser.py  metaars.py  metaconfig.py  types.py
src/utils/configurators/config_structures/: __init__.py  data.py  lora.py  model.py  run.py  tokenizer.py  training.py
src/utils/data/: __init__.py  dataset_processors.py  dataset_utils.py  extraction.py  processors.py
src/utils/kernels/: __init__.py  liger.py
src/utils/logs/: logger.py
src/utils/losses/: __init__.py  functional.py
src/utils/model/: __init__.py  model_preparation.py
src/utils/scriptargs/: __init__.py  dpo_args.py  grpo_args.py  ppo_args.py  sft_args.py
src/utils/stdout/: __init__.py  model_answer.py  printers.py  tabula.py
src/utils/trainers/: __init__.py  distillator.py
src/validators/: russian.py
tests/: test_config_parsing.py  test_deepspeed_tuner.py  test_imports.py  test_kernels.py  test_lazy_importer.py  test_sft_tiny.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
