[project]
name = "myllm"
version = "0.1.0"
description = "Train your own LLM with any method you want!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
    "transformers>=4.53.1",
    "accelerate>=1.8.0",
    "deepspeed>=0.17.1",
    "datasets>=3.6.0",
    "typer[all]>=0.15.1",
    "pyyaml>=6.0.2",
    "trl>=0.19.1",
    "peft>=0.15.2",
    "wandb>=0.20.1",
    "bitsandbytes>=0.46.0",
    "latex2sympy2_extended>=1.10.1",
    "math_verify>=0.7.0",
    "transformer_engine>=2.4.0",
    "liger-kernel>=0.5.10",
    "pynvml>=12.0.0",
]

[project.scripts]
myllm = "myllm.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["myllm*"]
exclude = ["configs*"]
